# graiax-playwright

./: .gitignore  LICENSE  README.md  build.py  pdm_build.py  pyproject.toml
.github/workflows/: release.yml
src/graiax/playwright/: __init__.py  browser.py  get_page.py  i18n.py  installer.py  interface.py  pager.py  provider.py  service.py  util.py  utils.py
src/graiax/playwright/locale/zh_CN/LC_MESSAGES/: graiax-playwright.po
src/test/: test.py
