[project]
name = "graiax-playwright"
version = "0.2.3"
description = "适用于 Graia 的 Playwright 管理器"
authors = [
    { name = "BlueGlassBlock", email = "blueglassblock@outlook.com" },
    { name = "I Love Study", email = "1450069615@qq.com" },
    { name = "Redlnn", email = "w731347477@gmail.com" },
]
dependencies = [
    "launart>=0.6.3,<0.7.0",
    "loguru>=0.6.0,<1.0.0",
    "playwright>=1.27.1,<2.0.0",
    "typing-extensions",
]
keywords = ["graia", "graiax", "launart", "playwright"]
requires-python = ">=3.8.1"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
repository = "https://github.com/GraiaCommunity/graiax-playwright"

[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0", "babel>=2.12.1"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "babel>=2.12.1",
    "black>=23.1.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "richuru>=0.1.1",
]

[tool.pdm.build]
includes = ["src/graiax"]
excludes = ["src/graiax/playwright/locale/**/*.po"]
setup-script = "build.py"

[tool.pdm.scripts]
extract = "pybabel extract -o messages.pot --project graiax-playwright --version 1.0.0 -k N_ src/graiax/playwright/"
_init = "pybabel init -D graiax-playwright -i messages.pot -d src/graiax/playwright/locale/ -l {args}"
init = { composite = ["extract", "_init {args}"] }
_update = "pybabel update -D graiax-playwright -i messages.pot -d src/graiax/playwright/locale/"
update = { composite = ["extract", "_update"] }
compile = "pybabel compile -D graiax-playwright -d src/graiax/playwright/locale/"

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
