[project]
name = "graiax-playwright"
version = "0.4.2"
description = "适用于 Graia 的 Playwright 管理器"
authors = [
    { name = "BlueGlassBlock", email = "blueglassblock@outlook.com" },
    { name = "I Love Study", email = "1450069615@qq.com" },
    { name = "Redlnn", email = "w731347477@gmail.com" },
]
dependencies = [
    "launart>=0.8.2",
    "loguru>=0.7.2",
    "playwright>=1.43.0",
]
keywords = ["graia", "graiax", "launart", "playwright"]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
repository = "https://github.com/GraiaCommunity/graiax-playwright"

[build-system]
requires = ["pdm-backend", "babel"]
build-backend = "pdm.backend"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "babel>=2.16.0",
    "black>=24.8.0",
    "creart>=0.3.0",
    "isort>=5.13.2",
]

[tool.pdm.build]
package-dir = "src"
includes = ["src/graiax"]
source_includes = ["**/*.po"]

[tool.pdm.scripts]
extract = "pybabel extract -o messages.pot --project graiax-playwright --version 1.0.0 -k N_ src/graiax/playwright/"
_init = "pybabel init -D graiax-playwright -i messages.pot -d src/graiax/playwright/locale/ -l {args}"
init = { composite = ["extract", "_init {args}"] }
_update = "pybabel update -D graiax-playwright -i messages.pot -d src/graiax/playwright/locale/"
update = { composite = ["extract", "_update"] }
compile = "pybabel compile -D graiax-playwright -d src/graiax/playwright/locale/"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    # https://beta.ruff.rs/docs/rules
    "E",  # pycodestyle
    "F",  # pyflakes
    "UP", # pyupgrade
    # "I",  # isort
    # "D",  # pydocstyle
    "ASYNC", # flake8-async
]
ignore = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"
